tests/ui/traits/new-solver/recursive-self-normalization.stderr
error[E0283]: type annotations needed: cannot satisfy `<T as Foo>::Assoc: Bar`
  --> $DIR/recursive-self-normalization.rs:11:5
   |
LL |     needs_bar::<T::Assoc>();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: cannot satisfy `<T as Foo>::Assoc: Bar`
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization.rs:8:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
